Shifted some styling

--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
                 <tr>
                   <td class="icon-cell">
                     <img
+                      src="Images/Icons/navigate.svg"
+                      alt="The navigation icon" />
+                  </td>
+                  <td class="description-cell">
+                    <p>
+                      The scroll icon at the top right is the
+                      <strong>Navigation Menu</strong>
+                      . Use it to easily explore other sections of the website.
+                    </p>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td class="icon-cell">
+                    <img
                       src="Images/Icons/about.svg"
                       alt="The about me section icon" />
                   </td>
@@ -99,20 +114,7 @@
                     </p>
                   </td>
                 </tr>
-                <tr>
-                  <td class="icon-cell">
-                    <img
-                      src="Images/Icons/navigate.svg"
-                      alt="The navigation icon" />
-                  </td>
-                  <td class="description-cell">
-                    <p>
-                      The sunshine icon at the top right is the
-                      <strong>Navigation Menu</strong>
-                      . Use it to easily explore other sections of the website.
-                    </p>
-                  </td>
-                </tr>
+
                 <tr>
                   <td class="icon-cell">
                     <img
