Added Social Image meta data

--- a/index.html
+++ b/index.html
@@ -6,17 +6,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="canonical" href="https://tinotenda-mhedziso.pages.dev/" />
+    <meta name="robots" content="index, follow" />
+
     <meta
       name="description"
-      content="This is a portfolio website for Tinotenda Lincoln Mhedziso containing Tino's biography and social profiles such as LinkedIn and GitHub." />
+      content="Explore the portfolio of Tinotenda Mhedziso. Discover Tino's projects, skills, social links, and contact details all in one place." />
     <meta
       name="keywords"
-      content="Tinotenda Mhedziso, porfolio website, PassionOverPain" />
+      content="Tinotenda Mhedziso, portfolio website, software developer, web developer, Passion Over Pain, Passion-Over-Pain, GitHub, programming, coding projects, open-source, frontend developer, backend developer, full stack developer, JavaScript, HTML, CSS, software engineering" />
+
     <meta name="author" content="Tinotenda Mhedziso" />
     <meta
       name="google-site-verification"
       content="d8Uve78HfX_Hn9B7z1HEcAUZTfJtPwbEPWyrcFXI_dI" />
+    <!-- Open Graph Meta Tags (For Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:title" content="Tinotenda Mhedziso | HQ Portfolio" />
+    <meta
+      property="og:description"
+      content="Explore Tinotenda Mhedziso's portfolio, projects, and expertise in software development." />
+    <meta
+      property="og:image"
+      content="https://tinotenda-mhedziso.pages.dev/Images/preview.png" />
+    <meta
+      property="og:image:alt"
+      content="Tinotenda Mhedziso's portfolio preview image" />
+    <meta property="og:url" content="https://tinotenda-mhedziso.pages.dev/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags (For Twitter/X) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tinotenda Mhedziso | HQ Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Check out Tinotenda Mhedziso's portfolio showcasing his skills, projects, and expertise." />
+    <meta
+      name="twitter:image"
+      content="https://tinotenda-mhedziso.pages.dev/Images/preview.png" />
+    <meta
+      name="twitter:image:alt"
+      content="Tinotenda Mhedziso's portfolio preview image" />
+
     <link rel="shortcut icon" href="Images/Favicon.png" type="image/x-icon" />
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" />
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
+    <link rel="preconnect" href="https://unpkg.com" />
+
     <!-- Notyf CSS -->
     <link
       rel="stylesheet"
@@ -32,7 +67,7 @@
       rel="stylesheet" />
     <script src="https://unpkg.com/video.js/dist/video.js"></script>
 
-    <title>Tinotenda Mhedziso's portfolio website</title>
+    <title>Tinotenda Mhedziso | Portfolio</title>
   </head>
   <body>
     <div id="preloader">
