Apple icon integrated

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <meta
       name="twitter:image:alt"
       content="Tinotenda Mhedziso's portfolio preview image" />
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/Favicon.png" />
 
     <link rel="shortcut icon" href="Images/Favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
