--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
         <div id="checkCon" class="flexBox hidden">
           <p style="color: white">Your current Quests:</p>
           <div id="checklist">
-            <input name="r" type="checkbox" id="NavigationTask" disabled />
+            <!-- <input name="r" type="checkbox" id="NavigationTask" disabled />
             <label for="NavigationTask">Open nav menu</label>
             <input name="r" type="checkbox" id="CVTask" disabled />
             <label for="CVTask">Download my CV</label>
@@ -509,7 +509,7 @@
             <input name="r" type="checkbox" id="TalktoPassionTask" disabled />
             <label for="TalktoPassionTask">Talk to Passion</label>
             <input name="r" type="checkbox" id="GitHubTask" disabled />
-            <label for="GitHubTask">Follow me: GitHub</label>
+            <label for="GitHubTask">Follow me: GitHub</label> -->
           </div>
         </div>
         <div class="flexBox">
