Working on level quests

--- a/index.html
+++ b/index.html
@@ -497,20 +497,7 @@
         <h4>A Software Developer</h4>
         <div id="checkCon" class="flexBox hidden">
           <p style="color: white">Your current Quests:</p>
-          <div id="checklist">
-            <!-- <input name="r" type="checkbox" id="NavigationTask" disabled />
-            <label for="NavigationTask">Open nav menu</label>
-            <input name="r" type="checkbox" id="CVTask" disabled />
-            <label for="CVTask">Download my CV</label>
-            <input name="r" type="checkbox" id="AnimationsTask" disabled />
-            <label for="AnimationsTask">Toggle Animations</label>
-            <input name="r" type="checkbox" id="ToSTask" disabled />
-            <label for="ToSTask">Accept ToS</label>
-            <input name="r" type="checkbox" id="TalktoPassionTask" disabled />
-            <label for="TalktoPassionTask">Talk to Passion</label>
-            <input name="r" type="checkbox" id="GitHubTask" disabled />
-            <label for="GitHubTask">Follow me: GitHub</label> -->
-          </div>
+          <div id="checklist"></div>
         </div>
         <div class="flexBox">
           <button id="btn-message" class="button-message" onclick="contactMe()">
