Notification cards: Skills + Socials

--- a/index.html
+++ b/index.html
@@ -1259,7 +1259,9 @@
       <!-------------------------------------------Skills--------------------------------------------------------------------------------------------->
       <section class="Skills" id="SkillsSection">
         <div class="flexBox">
-          <h2 class="section-title subTitle bounce">
+          <h2
+            class="section-title subTitle bounce"
+            onclick="showNotification(` These are currently Tino's...`,11)">
             My Skills
             <span class="helper">?</span>
           </h2>
@@ -1304,7 +1306,9 @@
       <!------------------------------------------------My Socials---------------------------------------------------------------------------------------->
       <section class="Socials" id="SocialsSection">
         <div class="flexBox">
-          <h3 class="subTitle bounce section-title">
+          <h3
+            class="subTitle bounce section-title"
+            onclick="showNotification(`Whenever Tino feels...`,12)">
             My Socials
             <span class="helper">?</span>
           </h3>
