Level Up: Card Implemented

--- a/index.html
+++ b/index.html
@@ -1602,6 +1602,27 @@
             src="Audio/Music/Shogun's Shadow Trap.mp3"></audio>
         </div>
       </div>
+      <div class="level-up-card">
+        <div class="content">
+          <div class="back">
+            <div class="back-content">
+              <strong>Level Up!</strong>
+              <img
+                class="level-icon"
+                src="Images/Icons/star.svg"
+                alt="Level Icon" />
+            </div>
+          </div>
+          <div class="front">
+            <div class="close-btn">&times;</div>
+            <img class="level-image" src="Images/Me.webp" alt="Level Image" />
+            <div class="level-info">
+              <p class="user-name">Unknown User</p>
+            </div>
+            <p class="level-name">Level: Guest</p>
+          </div>
+        </div>
+      </div>
     </footer>
 
     <script type="text/javascript" src="p5.min.js"></script>
