Fixed class naming issue

--- a/index.html
+++ b/index.html
@@ -1607,7 +1607,7 @@
         <div class="content">
           <div class="back">
             <div class="back-content">
-              <strong>Level Up!</strong>
+              <strong>HQ Level Card</strong>
               <img
                 class="level-icon"
                 src="Images/Icons/star.svg"
@@ -1622,9 +1622,9 @@
               src="Images/Guest.webp"
               alt="Level Image" />
             <div class="level-info">
-              <p class="user-name">Unknown User</p>
+              <p class="user-name" id="card-name">Unknown User</p>
             </div>
-            <p class="level-name" id="level-title">Level: Guest</p>
+            <p class="level-name" id="card-title">Level: Guest</p>
           </div>
         </div>
       </div>
