--- a/index.html
+++ b/index.html
@@ -668,7 +668,8 @@
             onclick="showLevelCard()"
             src="Images/levelpic.webp"
             alt="Level Profile Picture"
-            class="profile-pic" />
+            class="profile-pic"
+            id="levelShower" />
           <div class="profile-info">
             <p id="user-name">Unknown User</p>
             <p id="user-level">Level: Guest</p>
