--- a/index.html
+++ b/index.html
@@ -665,7 +665,6 @@
         <!-- Profile Section -->
         <div class="nav-profile">
           <img
-            onclick="showLevelCard()"
             src="Images/levelpic.webp"
             alt="Level Profile Picture"
             class="profile-pic"
@@ -1012,7 +1011,7 @@
           </div>
           <div class="project-preview">
             <img
-              src="Images/Previews/The Atlas Six.png"
+              src="Images/Previews/The Atlas Six.webp"
               alt="The Atlas Six Preview" />
           </div>
         </div>
@@ -1175,7 +1174,7 @@
             </div>
           </div>
           <div class="project-preview">
-            <img src="Images/Previews/ProjectApp.png" alt="TaskApp Preview" />
+            <img src="Images/Previews/ProjectApp.webp" alt="TaskApp Preview" />
           </div>
         </div>
 
