Updated quest status functionality

--- a/index.html
+++ b/index.html
@@ -1633,7 +1633,7 @@
     <script type="text/javascript" src="p5.min.js"></script>
     <script type="text/javascript" src="p5.sound.min.js"></script>
     <script>
-      window.p5 = p5; // Ensure p5 is globally available
+      window.p5 = p5; // Ensuring that p5 is globally available, was giving errrors
     </script>
     <script type="text/javascript" src="function.js" defer></script>
 
