Quest: Updated Functionality
1. Incorporated a help message to explain HQ quests
2. Gave an ID to quests title so that style css can access it

--- a/index.html
+++ b/index.html
@@ -201,9 +201,7 @@
                     <p>
                       I have created a selection of
                       <strong>Checklist Quests</strong>
-                      which can be found in the Navigation Menu. These are
-                      designed to help you learn more about Tino and some
-                      personal requests he made.
+                      which can be found in the Navigation Menu.
                     </p>
                   </td>
                 </tr>
@@ -500,7 +498,9 @@
         </h1>
         <h4>A Software Developer</h4>
         <div id="checkCon" class="flexBox hidden">
-          <p style="color: white">
+          <p
+            id="checkConTitle"
+            onclick="showNotification(`These tasks will you...`,13)">
             Your current Quests:
             <span class="helper">?</span>
           </p>
