Quests: Listeners for more tasks
1. View Project Code
2. View LinkedIn
3. Project Site ( currently one)

Rather than on load adding all these listeners, try loading listeners with level progression ?

--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
               <span class="tag">Local-Database</span>
             </div>
             <div class="project-buttons">
-              <button class="ui-btn">
+              <button class="ui-btn project-code-btn">
                 <span>
                   <a
                     href="https://github.com/Passion-Over-Pain/CreateIT"
@@ -1107,7 +1107,7 @@
                 </span>
               </button>
 
-              <button class="ui-btn">
+              <button class="ui-btn project-download-btn">
                 <span>
                   <a
                     href="https://github.com/Passion-Over-Pain/CreateIT/releases/download/v1.2/CreateIT.zip">
@@ -1156,7 +1156,7 @@
               <span class="tag">Task App</span>
             </div>
             <div class="project-buttons">
-              <button class="ui-btn">
+              <button class="ui-btn project-code-btn">
                 <span>
                   <a
                     href="https://github.com/Passion-Over-Pain/ProjectManagementApp-Assignment"
@@ -1213,7 +1213,7 @@
               <span class="tag">Website</span>
             </div>
             <div class="project-buttons">
-              <button class="ui-btn">
+              <button class="ui-btn project-code-btn">
                 <span>
                   <a
                     href="https://github.com/Passion-Over-Pain/Portfolio-Redesigned"
@@ -1223,7 +1223,7 @@
                 </span>
               </button>
 
-              <button class="ui-btn" class="project-site-btn">
+              <button class="ui-btn project-site-btn">
                 <span>
                   <a
                     href="https://passion-over-pain.github.io/Portfolio-Redesigned/"
@@ -1233,14 +1233,17 @@
                 </span>
               </button>
 
-              <button class="ui-btn" class="project-like-btn">
+              <button class="ui-btn">
                 <span onclick="starRepository(`Portfolio-Redesigned`)">
                   Like
                 </span>
               </button>
             </div>
           </div>
-          <div class="project-preview" class="project-like-btn">
+          <div
+            class="project-preview"
+            class="project-like-btn"
+            class="project-site-btn">
             <a
               href="https://passion-over-pain.github.io/Portfolio-Redesigned/"
               target="_blank">
