Quest checkers update

--- a/index.html
+++ b/index.html
@@ -737,7 +737,9 @@
             <img src="Images/Icons/privacy.svg" alt="Terms Icon" />
             <x>Terms of Service</x>
           </li>
-          <li onclick="starRepository('Tinotenda-Mhedziso')">
+          <li
+            onclick="starRepository('Tinotenda-Mhedziso')"
+            id="LikeWebsiteChecker">
             <img src="Images/Icons/like-website.svg" alt="Download Icon" />
             <x>Like Website</x>
           </li>
