Added extra project

--- a/index.html
+++ b/index.html
@@ -1255,6 +1255,75 @@
             </a>
           </div>
         </div>
+        <div class="project-item" id="AccountingFirm">
+          <div class="project-icon">
+            <img
+              src="Images/Icons/accountingfirm.svg"
+              alt="Template Portfolio Icon" />
+          </div>
+          <div class="project-details">
+            <h2>Accounting Firm Website</h2>
+            <p>
+              A professional and responsive website concept designed for a
+              fictional accounting firm. The layout highlights core financial
+              services such as bookkeeping, taxation, and consulting through
+              clean sections and intuitive navigation.
+            </p>
+            <p>
+              <strong>Platforms:</strong>
+              Desktop, Laptop and Mobile
+            </p>
+            <p>
+              <strong>Version:</strong>
+              Released - 1.
+            </p>
+            <div class="project-tags">
+              <span class="tag">CSS</span>
+              <span class="tag">Email js</span>
+              <span class="tag">GSAP</span>
+              <span class="tag">HTML</span>
+              <span class="tag">JavaScript</span>
+              <span class="tag">Website</span>
+            </div>
+            <div class="project-buttons">
+              <button class="ui-btn project-code-btn">
+                <span>
+                  <a
+                    href="https://github.com/Passion-Over-Pain/AccountingFirm"
+                    target="_blank">
+                    Code
+                  </a>
+                </span>
+              </button>
+
+              <button class="ui-btn project-site-btn">
+                <span>
+                  <a
+                    href="https://passion-over-pain.github.io/AccountingFirm/"
+                    target="_blank">
+                    Site
+                  </a>
+                </span>
+              </button>
+
+              <button class="ui-btn">
+                <span onclick="starRepository(`AccountingFirm`)">Like</span>
+              </button>
+            </div>
+          </div>
+          <div
+            class="project-preview"
+            class="project-like-btn"
+            class="project-site-btn">
+            <a
+              href="https://passion-over-pain.github.io/AccountingFirm/"
+              target="_blank">
+              <img
+                src="Images/Previews/AccountingFirm.webp"
+                alt="Accounting Firm Website Preview" />
+            </a>
+          </div>
+        </div>
         <div class="flexBox">
           <button class="actionBtn ui-btn" id="Git">
             <span>
