Reverted links to anchor tags

--- a/index.html
+++ b/index.html
@@ -683,36 +683,36 @@
 
         <!-- Navigation Items -->
         <ul class="nav-links">
-          <x href="#">
+          <a href="#">
             <li>
               <img src="Images/Icons/home.svg" alt="Home Icon" />
               Home
             </li>
-          </x>
-          <x href="#AboutSection">
+          </a>
+          <a href="#AboutSection">
             <li>
               <img src="Images/Icons/about.svg" alt="About Icon" />
               About
             </li>
-          </x>
-          <x href="#ProjectsSection">
+          </a>
+          <a href="#ProjectsSection">
             <li>
               <img src="Images/Icons/website.svg" alt="Projects Icon" />
               Projects
             </li>
-          </x>
-          <x href="#SkillsSection">
+          </a>
+          <a href="#SkillsSection">
             <li>
               <img src="Images/Icons/star.svg" alt="Skills Icon" />
               Skills
             </li>
-          </x>
-          <x href="#SocialsSection">
+          </a>
+          <a href="#SocialsSection">
             <li>
               <img src="Images/Icons/follow.svg" alt="Skills Icon" />
               Socials
             </li>
-          </x>
+          </a>
           <li onclick="toggleHelpMode()" id="helpModeBtn">
             <img src="Images/Icons/help.svg" alt="Help Mode Icon" />
             <x id="helperText">Enable Help Mode</x>
