--- a/index.html
+++ b/index.html
@@ -692,25 +692,25 @@
           <a href="#AboutSection">
             <li>
               <img src="Images/Icons/about.svg" alt="About Icon" />
-              About
+              About Me
             </li>
           </a>
           <a href="#ProjectsSection">
             <li>
               <img src="Images/Icons/website.svg" alt="Projects Icon" />
-              Projects
+              My Projects
             </li>
           </a>
           <a href="#SkillsSection">
             <li>
               <img src="Images/Icons/star.svg" alt="Skills Icon" />
-              Skills
+              My Skills
             </li>
           </a>
           <a href="#SocialsSection">
             <li>
               <img src="Images/Icons/follow.svg" alt="Skills Icon" />
-              Socials
+              My Socials
             </li>
           </a>
           <li onclick="toggleHelpMode()" id="helpModeBtn">
@@ -719,11 +719,11 @@
           </li>
           <li onclick="downloadCV()">
             <img src="Images/Icons/cv.svg" alt="Download Icon" />
-            <x>Download CV</x>
+            <x>Download My CV</x>
           </li>
           <li onclick="contactMe()">
             <img src="Images/Icons/contact.svg" alt="Download Icon" />
-            <x>Contact Tino</x>
+            <x>Contact Me</x>
           </li>
           <li id="Anime">
             <img src="Images/Icons/animation.svg" alt="Toggle Icon" />
@@ -740,12 +740,22 @@
           <li
             onclick="starRepository('Tinotenda-Mhedziso')"
             id="LikeWebsiteChecker">
-            <img src="Images/Icons/like-website.svg" alt="Download Icon" />
-            <x>Like Website</x>
+            <img
+              src="Images/Icons/like-website.svg"
+              alt="Like this website Icon" />
+            <x>Like My Website</x>
+          </li>
+          <li onclick="followUser()">
+            <img
+              src="Images/Icons/support.svg"
+              alt="Follow Tinotenda Mhedziso Icon" />
+            <x>Follow Me</x>
           </li>
           <li onclick="supportMe()">
-            <img src="Images/Icons/support.svg" alt="Download Icon" />
-            <x>Support Tino</x>
+            <img
+              src="Images/Icons/support.svg"
+              alt="Support Tinotenda Mhedziso  Icon" />
+            <x>Support Me</x>
           </li>
         </ul>
       </nav>
