--- a/index.html
+++ b/index.html
@@ -954,6 +954,16 @@
                 <br />
                 <li>
                   <br />
+                  [Present]
+                  <br />
+                  Deputy Chairperson of the
+                  <span class="textBtn">
+                    <a href="">NMU Computer Society</a>
+                  </span>
+                </li>
+                <br />
+                <li>
+                  <br />
                   [March 2024 ~ December 2024]
                   <br />
                   Events Coordinator of the NMU Computer Society
