Updated Atlas Six bio

--- a/index.html
+++ b/index.html
@@ -999,10 +999,10 @@
           <div class="project-details">
             <h2>The Atlas Six</h2>
             <p>
-              A special project with +10k lines of code that will be released
-              soon. Whispers of destiny echo through forgotten lands, where
-              every choice carves a new path. In a journey where loyalty is
-              tested, who will stand with you when the truth is revealed?
+              The Atlas Six is a story-driven game set in a world of magic,
+              ancient mysteries, and alliances that are not always what they
+              seem. The journey revolves around the choices made by the created
+              player and the evolving relationships within the party.
             </p>
             <p>
               <strong>Platforms:</strong>
