--- a/index.html
+++ b/index.html
@@ -1075,15 +1075,21 @@
             </div>
             <div class="project-buttons">
               <button class="ui-btn">
-                <span onclick="show404()">Hidden</span>
+                <span>
+                  <a
+                    href="https://github.com/Passion-Over-Pain/Passion"
+                    target="_blank">
+                    Code
+                  </a>
+                </span>
               </button>
 
-              <button class="ui-btn">
-                <span onclick="show404()">Hidden</span>
+              <button class="ui-btn" onclick="openWebchat()">
+                <span>Chat</span>
               </button>
 
-              <button class="ui-btn">
-                <span onclick="show404()">Hidden</span>
+              <button class="ui-btn" onclick="starRepository(`Passion`)">
+                <span>Like</span>
               </button>
             </div>
           </div>
